# temperatures-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 57858e2fbf50_create_users_table.py
config/: config.json
db/: connection.py  seed.py  temperature_development.db
db/migrations/: 1.py
routes/: readings.py
views/: index.html  logged_in_home_page.html
